[gd_scene load_steps=10 format=2]

[ext_resource path="res://games/pawn_game/map_editor/map_editor.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/pawn_game/main/pawn_game_cam.gd" type="Script" id=3]
[ext_resource path="res://games/pawn_game/main/pawn_game_map.gd" type="Script" id=4]
[ext_resource path="res://games/pawn_game/main/pawn_game_main.gd" type="Script" id=5]
[ext_resource path="res://games/pawn_game/main/pawn_game_nav.gd" type="Script" id=6]
[ext_resource path="res://games/pawn_game/main/preview_tiles.gd" type="Script" id=7]
[ext_resource path="res://games/pawn_game/main/world_ui.gd" type="Script" id=8]
[ext_resource path="res://games/pawn_game/main/interact_popup.gd" type="Script" id=9]
[ext_resource path="res://games/pawn_game/main/pawn_controller.gd" type="Script" id=10]

[node name="pawn_game_main" type="Node2D"]
script = ExtResource( 5 )
tile_resource_dir = "res://games/pawn_game/map_components/tiles/tile_resources"

[node name="pawn_game_cam" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
script = ExtResource( 3 )

[node name="pawn_game_nav" type="Navigation2D" parent="."]
script = ExtResource( 6 )

[node name="pawn_game_map" type="Node2D" parent="pawn_game_nav"]
script = ExtResource( 4 )
main_path = NodePath("../..")

[node name="pawn_controller" type="Node2D" parent="pawn_game_nav"]
script = ExtResource( 10 )
pawn_scene_path = "res://games/pawn_game/pawns/pawn_basic/pawn_basic.tscn"

[node name="world_ui" type="Node2D" parent="."]
z_index = 5
script = ExtResource( 8 )

[node name="preview_tiles" type="Node2D" parent="world_ui"]
script = ExtResource( 7 )
main_path = NodePath("../..")

[node name="CanvasLayer" type="CanvasLayer" parent="world_ui"]

[node name="interact_popup" type="PopupMenu" parent="world_ui/CanvasLayer"]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 9 )

[node name="pawn_game_ui" type="CanvasLayer" parent="."]

[node name="map_editor" parent="pawn_game_ui" instance=ExtResource( 2 )]
mouse_filter = 2
main_path = NodePath("../..")
